// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "adt/array.proto";
import "strconv.proto";

package scalar;

message ProtoDomainLimit {
    oneof kind {
        google.protobuf.Empty none = 1;
        int64 inclusive = 2;
        int64 exclusive = 3;
    }
}

message ProtoEvalError {
    message ProtoUnsupported {
        string feature = 1;
        optional uint64 issue_no = 2;
    };
    message ProtoInvalidLayer {
        uint64 max_layer = 1;
        int64 val = 2;
    }
    message ProtoInvalidByteSequence {
        string byte_sequence = 1;
        string encoding_name = 2;
    }
    message ProtoInvalidJsonbCast {
        string from = 1;
        string to = 2;
    }
    message ProtoUnsupportedUnits {
        string units = 1;
        string typ = 2;
    }
    message ProtoOutOfDomain {
        ProtoDomainLimit lower = 1;
        ProtoDomainLimit upper = 2;
        string id = 3;
    }
    message ProtoStringValueTooLong {
        string target_type = 1;
        uint64 length = 2;
    }
    message ProtoIncompatibleArrayDimensions {
        message ProtoDims {
            uint64 f0 = 1;
            uint64 f1 = 2;
        }
        ProtoDims dims = 1;
    }
    oneof kind {
        int32 character_not_valid_for_encoding = 1;
        int32 character_too_large_for_encoding = 2;
        string date_bin_out_of_range = 3;
        google.protobuf.Empty division_by_zero = 4;
        ProtoUnsupported unsupported = 5;
        google.protobuf.Empty float_overflow = 6;
        google.protobuf.Empty float_underflow = 7;
        google.protobuf.Empty numeric_field_overflow = 8;
        google.protobuf.Empty float32_out_of_range = 9;
        google.protobuf.Empty float64_out_of_range = 10;
        google.protobuf.Empty int16_out_of_range = 11;
        google.protobuf.Empty int32_out_of_range = 12;
        google.protobuf.Empty int64_out_of_range = 13;
        google.protobuf.Empty oid_out_of_range = 14;
        google.protobuf.Empty interval_out_of_range = 15;
        google.protobuf.Empty timestamp_out_of_range = 16;
        google.protobuf.Empty char_out_of_range = 17;
        google.protobuf.Empty invalid_base64_equals = 18;
        uint32 invalid_base64_symbol = 19;
        google.protobuf.Empty invalid_base64_end_sequence = 20;
        string invalid_timezone = 21;
        google.protobuf.Empty invalid_timezone_interval = 22;
        google.protobuf.Empty invalid_timezone_conversion = 23;
        ProtoInvalidLayer invalid_layer = 24;
        adt.array.ProtoInvalidArrayError invalid_array = 25;
        string invalid_encoding_name = 26;
        string invalid_hash_algorithm = 27;
        ProtoInvalidByteSequence invalid_byte_sequence = 28;
        ProtoInvalidJsonbCast invalid_jsonb_cast = 29;
        string invalid_regex = 30;
        uint32 invalid_regex_flag = 31;
        string invalid_parameter_value = 32;
        google.protobuf.Empty neg_sqrt = 33;
        google.protobuf.Empty null_character_not_permitted = 34;
        string unknown_units = 35;
        ProtoUnsupportedUnits unsupported_units = 36;
        google.protobuf.Empty unterminated_like_escape_sequence = 37;
        strconv.ProtoParseError parse = 38;
        strconv.ProtoParseHexError parse_hex = 39;
        string internal = 40;
        string infinity_out_of_domain = 41;
        string negative_out_of_domain = 42;
        string zero_out_of_domain = 43;
        ProtoOutOfDomain out_of_domain = 44;
        string complex_out_of_range = 45;
        google.protobuf.Empty multiple_rows_from_subquery = 46;
        string undefined = 47;
        google.protobuf.Empty like_pattern_too_long = 48;
        google.protobuf.Empty like_escape_too_long = 49;
        ProtoStringValueTooLong string_value_too_long = 50;
        google.protobuf.Empty multidimensional_array_removal_not_supported = 51;
        ProtoIncompatibleArrayDimensions incompatible_array_dimensions = 52;
        string type_from_oid = 53;
    }
}
